# openenvMeta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UI_PREVIEW.md  app.py  entrypoint.sh  inference.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: replace.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.build.json  vite.config.js  vite.config.ts
frontend/scripts/: build.mjs
frontend/src/: App.tsx  AssistantView.tsx  SimulatorView.tsx  shared.ts
inference/: run_baseline.py
openenv/: __main__.py
openenv/core/: __init__.py  env_server.py
parking_env/: __init__.py  assistant.py  core.py  geo.py  models.py  providers.py  reward_engine.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
tests/: test_assistant.py  test_audit.py  test_env.py  test_reward.py  test_tasks.py
