[project]
name = "smart-parking-env"
version = "0.1.0"
description = "A smart urban parking simulation environment for OpenEnv."
dependencies = [
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn",
    "aiofiles",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "server*", "tasks*", "openenv*"]
exclude = ["frontend*", "inference*", "tests*"]
